Fix asset paths for Vite build

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Gọi API Đơn Giản</title>
-    <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
-
-    <div class="container">
-        <h1>Danh sách Người dùng</h1>
-        <ul id="user-list">
+    <div id="app">
+        <div class="container">
+            <h1>Danh sách Người dùng</h1>
+            <ul id="user-list">
             </ul>
-        <div id="loading">Đang tải...</div>
+            <div id="loading">Đang tải...</div>
+        </div>
     </div>
-
-    <script src="src/main.js"></script>
+    
+    <script type="module" src="/src/main.js"></script>
 </body>
 </html>
