--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
         </div>
     </div>
     
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/main.js"></script>
 </body>
 </html>
