Add buttons to fetch users and posts

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 <body>
     <div id="app">
         <div class="container">
-            <h1>Danh sách Người dùng</h1>
-            <ul id="user-list">
-            </ul>
+            <h1>Danh sách Dữ liệu</h1>
+            
+            <div class="button-container">
+                <button id="fetchUsersBtn">Tải danh sách Người dùng</button>
+                <button id="fetchPostsBtn">Tải danh sách Bài viết</button>
+            </div>
+            <ul id="data-list">
+                </ul>
             <div id="loading">Đang tải...</div>
         </div>
     </div>
